# rust-htmx-demo

./: .env.example  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  docker-compose.yml  package-lock.json  package.json  tailwind.config.js  tsconfig.json
migrations/: 20240514064759_create_todo_table.sql
src/: app.rs  config.rs  db.rs  main.rs  repository.rs  todo.rs
src/app/: mod.rs  static_assets.rs  utils.rs
src/scripts/: errorPopups.ts  htmxEvents.d.ts
static/: htmx-sse-1.9.12.js  script.js  styles.css
