[package]
name = "rust-htmx-demo"
version = "0.1.0"
edition = "2021"
authors = ["hermannm"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
maud = { version = "0.26.0", features = ["axum"] }
serde = { version = "1.0.198", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
