[package]
name = "rust-htmx-demo"
version = "0.1.0"
edition = "2021"
authors = ["hermannm"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = { version = "0.7.5", features = ["macros"] }
dotenvy = "0.15.7"
envy = "0.4.2"
futures = "0.3.30"
maud = { version = "0.26.0", features = ["axum"] }
mime_guess = "2.0.4"
rust-embed = { version = "8.3.0", features = ["axum"] }
serde = { version = "1.0.198", features = ["derive"] }
sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tower-livereload = "0.9.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# See https://github.com/launchbadge/sqlx?tab=readme-ov-file#compile-time-verification
[profile.dev.package.sqlx-macros]
opt-level = 3
